# rwkv-skills

./: .env  .env.example  .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  README.zh-CN.md  main.py  prompt_trials.toml  pyproject.toml  readme.md  test.py
configs/: README.md  README.zh-CN.md  _templates.toml  aime24.toml  aime25.toml  algebra222.toml  amc23.toml  answer_judge.toml  asdiv.toml  assistantbench_offline.toml  beyond_aime.toml  bfcl_v3.toml  bfcl_v3_50_avg1.toml  ceval.toml  cmmlu.toml  college_math.toml  comp_math_24_25.toml  gaokao2023en.toml  gpqa.toml  gsm8k.toml  gsm_plus.toml  hendrycks_math.toml  hle_al.toml  hmmt_feb25.toml  human_eval_cn.toml  human_eval_plus.toml  ifeval.toml  livecodebench.toml  math_500.toml  math_odyssey.toml  mawps.toml  mbpp.toml  mbpp_plus.toml  minerva_math.toml  mmlu.toml  mmlu_pro.toml  mmlu_redux.toml  mmmlu.toml  olympiadbench.toml  omni_math.toml  (+2 more)
configs/perf/: qwen2_1_5b_instruct.toml  qwen2_5_1_5b_instruct.toml
configs/run/: bfcl_v3.toml  browsecomp.toml  browsecomp_zh.toml  mcp_bench.toml  tau2_bench_airline.toml  tau2_bench_retail.toml  tau2_bench_telecom.toml  tau_bench_airline.toml  tau_bench_retail.toml  tau_bench_telecom.toml
docs/: db_schema_guide.zh-CN.md  eval_db_logic.zh-CN.md  service_perf_benchmark.zh-CN.md
docs/review/: 01-architecture.md  02-db.md  03-scheduler.md  04-evaluators-metrics.md  05-bin-entrypoints.md  06-datasets.md  07-infer.md  08-space.md  09-tests-and-quality.md  10-refactor-roadmap-mainpy.md  11-benchmark-alignment-plan.md  12-rwkv-rs-migration-status.md  README.md
scripts/: export_wrong_eval_records.py  export_wrong_records_matrix.py  migrate_add_session_fields.py  prompt_ablation.py  prompt_ablation_report.py  schema.sql
scripts/e2e/: run_space_playwright_probe.sh  space_playwright_probe.mjs
src/: main.py
src/db/: async_writer.py  database.py  eval_db_repo.py  eval_db_service.py  export_results.py  orm.py  pool.py  sql_repo.py
src/eval/: benchmark_config.py  benchmark_registry.py  env_config.py  execution_plan.py  field_common.py  k_values.py  prompt_builders.py  runner_registry.py
src/infer/: api.py  backend.py  engine.py  lightning_engine.py  model.py  openai_service.py  rapid_sampling_loader.py  sampling.py  server.py  service.py  sse.py  state_pool.py
src/infra/: database.py  eval_db_repo.py  eval_db_service.py
src/space/: __init__.py  app.py  assets.py  charts.py  constants.py  data.py  domains.py  eval_records.py  (+5 more)
tests/: test_at_k_metrics.py  test_benchmark_config.py  test_benchmark_dataset_utils.py  test_benchmark_profiler.py  test_benchmark_queue.py  test_benchmark_registry.py  test_coding_runner.py  test_dataset_runtime.py  test_db_integration.py  test_evaluating_benchmark.py  test_execution_plan.py  test_export_wrong_eval_records.py  test_free_response_answer_matching.py  test_free_response_judge_config.py  test_free_response_metrics.py  test_function_calling_bfcl_v3.py  test_function_calling_common.py  test_function_calling_dataset_prep.py  test_function_calling_matrix.py  test_function_calling_runner.py  test_infer_constraints.py  test_infer_fleet.py  test_infer_router.py  test_infer_split.py  test_instruction_following_avg.py  test_instruction_following_runner.py  test_instructions_util.py  test_knowledge_pipeline.py  test_knowledge_runner.py  test_legacy_dataset_spec_migrations.py  test_lightning_engine.py  test_livecodebench_evaluation.py  test_livecodebench_prompt_format.py  test_main_config.py  test_maths_runner.py  test_migrate_old_results.py  test_perf_benchmark.py  test_prompt_ablation.py  test_prompt_builders.py  test_prompt_templates.py  (+14 more)
(+201 files in other folders)
